--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -9,19 +9,19 @@ const EXPERIENCE = [
       "Trabajo como desarrollador de aplicaciones FullStack. Estoy acostumbrado a trabajar con tecnologías como Angular, Spring y AWS, además de diversos lenguajes como Java, JavaScript, TypeScript y Mule.",
     link: "https://eviden.com/es-es/",
   },
-  {
-    date: "Salesianos la cuesta - (Septiembre 2021 - Mayo 2023)",
-    title: "CFGS Desarrollo de Aplicaciones Multiplataforma",
-    description:
-      "Es un ciclo superiro el cual cursé después de haber terminado mis estudios de bachillerato. Utilicé teconologías tales como: Respcto al backend vi bases de datos (MySQL, Oracle, H2), herramientas (Eclipse), frameworks (Spring Boot, Node.js). También amprendí a construir aplicaciones eficientes y escalables. En el front, abrodé React y React Native, junto con herramientas como Visual Studio Code e IntelliJ IDEA. Aprendí a crear interfaces dinámicas y aplicaciones móviles. Los lenguajes clave en el curso fueron: Python para versatilidad, Java para robustez y JavaScrpt para interactividad en el front y el back.",
-    link: "https://www.ejemplo.com/empresa-a",
-  },
-  {
-    date: "Septiembre 2018 - Diciembre 2018",
-    title: "Desarrollador Web Freelance",
-    description:
-      "Ofrecí servicios de desarrollo web a varios clientes, especializándome en la creación de sitios web responsivos y fáciles de usar.",
-  },
+  // {
+  //   date: "Salesianos la cuesta - (Septiembre 2021 - Mayo 2023)",
+  //   title: "CFGS Desarrollo de Aplicaciones Multiplataforma",
+  //   description:
+  //     "Es un ciclo superiro el cual cursé después de haber terminado mis estudios de bachillerato. Utilicé teconologías tales como: Respcto al backend vi bases de datos (MySQL, Oracle, H2), herramientas (Eclipse), frameworks (Spring Boot, Node.js). También amprendí a construir aplicaciones eficientes y escalables. En el front, abrodé React y React Native, junto con herramientas como Visual Studio Code e IntelliJ IDEA. Aprendí a crear interfaces dinámicas y aplicaciones móviles. Los lenguajes clave en el curso fueron: Python para versatilidad, Java para robustez y JavaScrpt para interactividad en el front y el back.",
+  //   link: "https://www.ejemplo.com/empresa-a",
+  // },
+  // {
+  //   date: "Septiembre 2018 - Diciembre 2018",
+  //   title: "Desarrollador Web Freelance",
+  //   description:
+  //     "Ofrecí servicios de desarrollo web a varios clientes, especializándome en la creación de sitios web responsivos y fáciles de usar.",
+  // },
 ];
 ---
 
