--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="flex justify-between items-center py-5 w-[1120px] mx-auto">
+<header class="flex justify-between items-center py-5 w-full xl:w-[1120px] mx-auto">
   <img
     class="rounded-full size-12"
     src="https://elcomercio.pe/resizer/AZ7siJ-pVI4g_V6InSuCYi1wxB8=/580x330/smart/filters:format(jpeg):quality(90)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/4QVVHMRLSNAX5AV2DONRO55XGU.jpg"
