--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -13,10 +13,10 @@ const { title, description, link, date } = Astro.props;
 >
 </div>
 <time
-  class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+  class="mb-1 text-sm font-normal leading-none text-sky-300"
   >{date}</time
 >
-<h3 class="text-lg font-semibold text-yellow-500">
+<h3 class="text-lg font-semibold text-yellow-500 mt-2">
   {title}
 </h3>
 <p class="mb-4 text-base font-normal text-gray-200 text-pretty">
