--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,57 +9,76 @@ import Mail from "@/components/icons/Mail.astro";
 import Experience from "@/components/Experience.astro";
 import SectionContainer from "../components/SectionContainer.astro";
 import SuitCase from "@/components/icons/SuitCase.astro";
+import Code from "@/components/icons/Code.astro";
+import Projects from "@/components/Projects.astro";
 ---
 
 <Layout
   title="Portfolio de Dario - Desarollador y Programador Web"
   description="Contrata a Darío para crear tu aplicación web o móvil. Desarollador Web. Especializado en crear aplicaciones únicas"
 >
-  <main>
-    <SectionContainer class="py-44 pb-24">
-      <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
-        Hey, soy Dario Chinea <a
+  <main class="px-4">
+    <SectionContainer class="py-44 pb-32">
+      <h1
+        class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
+      >
+        ¡Hola! Soy Dario Chinea Delgado <a
           href="https://www.linkedin.com/in/dar%C3%ADo-chinea-delgado-87156b257/"
           target="_blank"
           rel="noopener"
           class="flex justify-center items-center"
         >
-          <Badge>disponible para trabajar</Badge>
+          <Badge>Disponible para trabajar</Badge>
         </a>
       </h1>
-      <h2 class="text-2xl text-wrap">
-        <span>-1 año de experiencia, pero con ganas de aprender.</span>
-        <span class="text-yellow-400"> Desarollador Web.</span><span
-          class="text-red-400"
-        >
-          De Tenerife, España.</span
-        >
-        Especializado en crear aplicaciones únicas
-      </h2>
+      <h2 class="text-xl lg:text-2xl text-wrap max-w-[1200px] mb-4">
+        <span>
+          Un apasionado <span class="font-semibold text-blue-300"
+            >desarrollador Full Stack y creador de aplicaciones.</span
+          > que reside en Tenerife, <span class="font-semibold"
+            ><span class="text-red-500">Es</span><span class="text-yellow-400"
+              >pa</span
+            ><span class="text-red-500">ña</span>
+          </span> Mi viaje en el mundo de la tecnología combina habilidades frontend
+          y backend para ofrecer soluciones óptimas.
+          <span class="font-semibold text-blue-300"
+            >¡Bienvenido a mi portafolio, donde mi código cobra vida!</span
+          >
+        </span>
 
-      <nav class="flex gap-x-4 mt-8">
-        <SocialPill
-          href="https://www.linkedin.com/in/dar%C3%ADo-chinea-delgado-87156b257/"
-        >
-          <LinkedIn class="size-6" />
-          LinkedIn
-        </SocialPill>
-        <SocialPill href="https://github.com/DarioCDDev">
-          <GitHub class="size-6" />
-          Github
-        </SocialPill>
-        <SocialPill href="mailto:dariocddev@gmail.com">
-          <Mail class="size-6" />
-          dariocddev@gmail.com
-        </SocialPill>
-      </nav>
+        <nav class="flex gap-4 mt-4 lg:mt-8 flex-wrap">
+          <SocialPill
+            href="https://www.linkedin.com/in/dar%C3%ADo-chinea-delgado-87156b257/"
+          >
+            <LinkedIn class="size-4 md:size-6" />
+            LinkedIn
+          </SocialPill>
+          <SocialPill href="https://github.com/DarioCDDev">
+            <GitHub class="size-4 lg:size-6" />
+            Github
+          </SocialPill>
+          <SocialPill href="mailto:dariocddev@gmail.com">
+            <Mail class="size-4 lg:size-6" />
+            dariocddev@gmail.com
+          </SocialPill>
+        </nav>
+      </h2>
     </SectionContainer>
 
     <SectionContainer id="experience">
-      <h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
-        <SuitCase class="size-8"/>
-        Experiencia laboral</h2>
+      <h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+        <SuitCase class="size-8" />
+        Experiencia laboral
+      </h2>
       <Experience />
     </SectionContainer>
-  </main>
-</Layout>
+
+    <SectionContainer id="projects">
+      <h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+        <Code class="size-8" />
+        Proyectos
+      </h2>
+      <Projects />
+    </SectionContainer>
+  </main></Layout
+>
