Work in progress

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,9 @@
-<header class="flex justify-between items-center py-5 w-full xl:w-[1120px] mx-auto">
-  <img
-    class="rounded-full size-12"
-    src="https://elcomercio.pe/resizer/AZ7siJ-pVI4g_V6InSuCYi1wxB8=/580x330/smart/filters:format(jpeg):quality(90)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/4QVVHMRLSNAX5AV2DONRO55XGU.jpg"
-    alt="dario photo"
-  />
-  <nav class="flex flex-row gap-x-10 opacity-80">
-    <a href="#top">Inicio</a>
-    <a href="#about">Sobre mí</a>
-    <a href="#projects">Proyectos</a>
-    <a href="#experience">Experiencia</a>
-    <a href="#contact">Contacto</a>
+<header class="flex justify-center items-center py-5 w-full xl:w-[1120px] mx-auto">
+  <nav class="flex flex-row gap-x-3 lg:gap-x-10 md:gap-x-5 text-sm md:text-base">
+    <a href="#top" class="hover:underline hover:ml-4 hover:mr-4 transition-all duration-300">Inicio</a>
+    <a href="#about" class="hover:underline hover:ml-4 hover:mr-4 transition-all duration-300">Sobre mí</a>
+    <a href="#experience" class="hover:underline hover:ml-4 hover:mr-4 transition-all duration-300">Experiencia</a>
+    <a href="#projects" class="hover:underline hover:ml-4 hover:mr-4 transition-all duration-300">Proyectos</a>
+    <a href="#contact" class="hover:underline hover:ml-4 hover:mr-4 transition-all duration-300">Contacto</a>
   </nav>
 </header>
