--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,21 +1,30 @@
-<footer class="rounded-lg shadow m-4 bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10" >
-  <div
-    class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
-  >
-    <span class="text-s sm:text-center text-yellow-200/90"
+<footer
+  class="rounded-lg shadow m-4 bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10 flex flex-col items-center"
+  id="contact"
+>
+  <div class="mb-4">
+    <ul
+      class="flex flex-wrap items-center mt-3 font-medium dark:text-white/90 sm:mt-0"
+    >
+      <li>
+        <span class="me-4 md:me-6">+34 663580414</span>
+      </li>
+      <li>
+        <a
+          href="mailto:dariocddev@gmail.com"
+          class="hover:underline me-4 md:me-6">dariocddev@gmail.com</a
+        >
+      </li>
+      <li>
+        <a href="#" class="hover:underline">Volver arriba</a>
+      </li>
+    </ul>
+  </div>
+  <div>
+    <span class="text-sm md:text-base sm:text-center text-yellow-200/90"
       >© 2024 <a href="https://dariocddev.com/" class="hover:underline"
         >dariocddev</a
       >. Casitodos los derechos reservados
     </span>
-    <ul
-      class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
-    >
-      <li>
-        <a href="#" class="hover:underline me-4 md:me-6">Sobre mí</a>
-      </li>
-      <li>
-        <a href="#" class="hover:underline">Contacto</a>
-      </li>
-    </ul>
   </div>
 </footer>
