--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -29,7 +29,7 @@ const { image, title, description, tags, link, github } = Astro.props;
   <p class="text-lg mb-4 text-pretty">{description}</p>
   <ul class="flex gap-x-2 flex-row mb-4">
     {
-      tags.map((tag) => (
+      tags.map((tag : any) => (
         <li>
           <span
             class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2`}
