--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -79,8 +79,8 @@ const PROJECTS = [
     title: "Portfolio - React",
     description:
       "Este fue el primer portoflio que hice, está hecho en React, lo cual no tiene mucho sentido ya que este portoflio es estático, mejor utilizar Astro 😉",
-    link: "https://dariochdev.com/",
-    github: "https://github.com/DarioCD/Portfolio",
+    link: "https://portfolio-astro-iota-lemon.vercel.app/",
+    github: "https://github.com/DarioCDDev/Portfolio-dev-Astro-Prueba",
     image: "/projects/react_project.png",
     tags: [TAGS.REACT, TAGS.HOSTINGUER, TAGS.JAVASCRIPT, TAGS.CSS],
   },
